Actualicé el index agregando el logo de AnalizAr

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 <body>
     <h1>Analizador de Consumo Eléctrico</h1>
-    <p>Sistema para analizar el consumo eléctrico domiciliario o de locales comerciales, permitiéndole conocer al usuario de forma fácil y gráfica los consumos que se generan durante el día, mediante los datos obtenidos del medidor de energía instalado en el domicilio o local comercial.
-        
-    </p>    
+    <img src="C:\ISPC\ProgramadorFullStack\HtmlCssJavaScript\imagenes\Logo AnalizAr Verde.jpeg">
+    <p>Sistema para <strong><em>analizar</em></strong> el consumo eléctrico domiciliario o de locales comerciales,
+    permitiéndole conocer al usuario de forma <mark>fácil y gráfica</mark> los consumos que se generan
+    durante el día, mediante los datos obtenidos del medidor de energía instalado en el
+    domicilio o local comercial.</p>   
 </body>
 </html>
