--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Analizador de Consumo Eléctrico</h1>
+    <h2>"Toma control de tus consumos"</h2>
     <img src="C:\ISPC\ProgramadorFullStack\HtmlCssJavaScript\imagenes\Logo AnalizAr Verde.jpeg">
     <p>Sistema para <strong><em>analizar</em></strong> el consumo eléctrico domiciliario o de locales comerciales,
     permitiéndole conocer al usuario de forma <mark>fácil y gráfica</mark> los consumos que se generan
