Apliqué énfasis en las etiquetas h1 y h2

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>Analizador de Consumo Eléctrico</h1>
-    <h2>"Toma control de tus consumos"</h2>
+    <h1><strong>Analizador de Consumo Eléctrico</strong></h1>
+    <h2><em>"Toma control de tus consumos"</em></h2>
     <img src="C:\ISPC\ProgramadorFullStack\HtmlCssJavaScript\imagenes\Logo AnalizAr Verde.jpeg">
     <p>Sistema para <strong><em>analizar</em></strong> el consumo eléctrico domiciliario o de locales comerciales,
     permitiéndole conocer al usuario de forma <mark>fácil y gráfica</mark> los consumos que se generan
